userTasks correct progress update

--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -1474,7 +1474,7 @@ async function updateLuckyChestProgress(userName, earnedHoney) {
 
 
 
-
+// addtasks.html Settings: Rotation //////////////////////////////////////////////////////////////////////////////////////////
 
 
 async function handleDecision(title, date, index, decision, user, event) {
@@ -1587,8 +1587,10 @@ async function handleReplace(title, date, index, user, event) {
 }
 
 
+// addtasks.html Settings: Rotation //////////////////////////////////////////////////////////////////////////////////////////
 
 
+//--
 
 async function handleRevert(title, date, index, user, event) {
   try {
@@ -1630,10 +1632,10 @@ async function handleRevert(title, date, index, user, event) {
   }
 }
 
+//---
 
 
-
-
+// addtasks.html Settings: Rotation //////////////////////////////////////////////////////////////////////////////////////////
 
 async function loadTasks() {
   try {
@@ -1755,7 +1757,7 @@ async function loadTasks() {
 
 
 
-
+// addtasks.html Settings: Rotation //////////////////////////////////////////////////////////////////////////////////////////
 
 
 
