--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -1437,7 +1437,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
         let monthOffset = 0;
         
-// tasks.html Settings: Rotation //////////////////////////////////////////////////////////////////////////////////////////
+// addtasks.html Settings: Rotation //////////////////////////////////////////////////////////////////////////////////////////
 
         function generateScrollableDates(monthOffset = 0) {
   const container = document.getElementById("dayScrollContainer");
@@ -1492,7 +1492,7 @@ document.addEventListener("DOMContentLoaded", () => {
 }
         
 
-// tasks.html Settings: Rotation //////////////////////////////////////////////////////////////////////////////////////////
+// addtasks.html Settings: Rotation //////////////////////////////////////////////////////////////////////////////////////////
 
         document.getElementById("prevMonth").addEventListener("click", () => {
           monthOffset--;
@@ -1887,7 +1887,7 @@ document.addEventListener("DOMContentLoaded", () => {
         });
 
 
-// tasks.html Settings: Rotation //////////////////////////////////////////////////////////////////////////////////////////
+// addtasks.html Settings: Rotation //////////////////////////////////////////////////////////////////////////////////////////
 
 
         async function loadOverallProgress(userName) {
@@ -1964,7 +1964,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 }
 
-// tasks.html Settings: Rotation //////////////////////////////////////////////////////////////////////////////////////////
+// addtasks.html Settings: Rotation //////////////////////////////////////////////////////////////////////////////////////////
 
         </script>
 
