--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -598,7 +598,7 @@ if (typeof mixedTurnData === 'undefined' || typeof individualTurnData === 'undef
 
 
 
-
+// addtasks.html Settings: Rotation //////////////////////////////////////////////////////////////////////////////////////////
 
 
         // Load tasks for a specific date
@@ -874,7 +874,7 @@ async function showTaskDetails(task) {
 
 
 
-
+// addtasks.html Settings: Rotation //////////////////////////////////////////////////////////////////////////////////////////
 
 
 
