Test Creating User Avatars #4

--- a/mobile/2-UserProfiles/chooseAvatar.html
+++ b/mobile/2-UserProfiles/chooseAvatar.html
@@ -230,7 +230,8 @@
   const urlParams = new URLSearchParams(window.location.search);
   const adminEmail = urlParams.get("admin");
   const userName = urlParams.get("user");
-  const avatarPath = `/shared/Avatars/${id}.png`;
+  const avatarPath = `/BeeMazing-Y1/shared/Avatars/${id}.png`;
+
 
   confirmButton.onclick = () => {
     // Save avatar to server
